# Sol-account-cleaner

./: .gitignore  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEV_FLAG_DOCUMENTATION.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION_COMPLETE.md  LICENSE  MEDIUM_PRIORITY_IMPROVEMENTS.md  NFT_SUPPORT_PLAN.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PROJECT_PLAN.md  README.md  README_PRODUCTION.md  SECURITY.md  SECURITY_IMPROVEMENTS.md  docker-compose.dev.yml  docker-compose.yml
.windsurf/rules/: solana-recover-formatting.md
config/: default.toml  development.toml
docs/: API_DOCUMENTATION.md  NFT_MODULE_DOCUMENTATION.md  PARALLEL_PROCESSING_GUIDE.md  api.md  architecture.md  configuration.md  deployment.md  getting-started.md  troubleshooting.md  wallet-integration.md
docs/code-review/: architecture-issues.md  critical-security-issues.md
examples/: README.md  advanced_scanner.rs  api_client.rs  basic_scan.rs  batch_processing.rs  batch_scan.rs  comprehensive_wallet_demo.rs  enhanced_wallet_signing.rs  phantom_integration.rs  recovery_example.rs  simple_scan.rs  solflare_integration.rs  turnkey_integration.rs  turnkey_web_api.rs  web_api.rs
src/: lib.rs  main.rs
src/api/: axum_server.rs  handlers.rs  middleware.rs  mod.rs  server.rs  server_old.rs  tests.rs
src/config/: mod.rs  program_ids.rs  settings.rs
src/core/: adaptive_parallel_processor.rs  benchmarks.rs  config_management.rs  enhanced_scanner.rs  error_handling.rs  error_recovery.rs  errors.rs  fee_calculator.rs  integration_test.rs  mod.rs  optimized_scanner.rs  parallel_processor.rs  parallel_tests.rs  processor.rs  processor_metrics.rs  recovery.rs  recovery_tests.rs  resource_monitor.rs  scanner.rs  scanner_builder.rs  scanner_tests.rs  tests.rs  thread_pool_optimizer.rs  types.rs  ultra_fast_scanner.rs  unified_scanner.rs  unified_scanner_tests.rs
src/core/tests/: openbook_tests.rs
src/nft/: batch.rs  cache.rs  errors.rs  metadata.rs  mod.rs  portfolio.rs  scanner.rs  security.rs  strategies.rs  types.rs  valuation.rs
src/rpc/: batch_client.rs  client.rs  client_tests.rs  enhanced_client.rs  enhanced_pool.rs  enhanced_pool_tests.rs  mock.rs  mod.rs  optimized_pool.rs  pool.rs  tests.rs
src/security_old/: hsm_provider.rs  memory_encryption.rs  mod.rs  rate_limiter.rs
src/storage/: cache.rs  hierarchical_cache.rs  mod.rs  multi_level_cache.rs  optimized_cache.rs  persistence.rs  persistence_old.rs  redis_cache.rs  tests.rs
src/utils/: advanced_buffer_pools.rs  async_audit_logger.rs  cache.rs  circuit_breaker.rs  distributed_rate_limiter.rs  enhanced_memory_manager.rs  enhanced_metrics.rs  gc_scheduler.rs  hardware_encryption.rs  http2_client.rs  logging.rs  memory_integration.rs  memory_monitor.rs  memory_optimizer.rs  memory_pool.rs  metrics.rs  mod.rs  monitoring.rs  object_pool.rs  protocol_optimizer.rs  security_auditor.rs  validation.rs
src/wallet/: audit_logger.rs  manager.rs  mod.rs  nonce_manager.rs  phantom.rs  private_key.rs  private_key_tests.rs  solflare.rs  tests.rs  transaction_validator.rs  turnkey.rs  turnkey_tests.rs
tests/: integration_tests.rs  load_tests.rs  performance_benchmark.rs  performance_tests.rs
tests/common/: mod.rs
tests/integration/: end_to_end_tests.rs
tests/unit/: core_tests.rs  utils_tests.rs
tests_disabled/: mod.rs
tests_disabled/common/: mod.rs
tests_disabled/integration/: api_tests.rs  mod.rs
tests_disabled/unit/: core_tests.rs  mod.rs  utils_tests.rs  wallet_tests.rs
web-test/: index.html
