[package]
name = "solana-recover"
version = "1.0.6"
edition = "2021"
description = "A comprehensive Solana wallet recovery and account management tool"
license = "MIT"
repository = "https://github.com/Genius740Code/Sol-account-cleaner"
homepage = "https://github.com/Genius740Code/Sol-account-cleaner"

[features]
default = ["scanner", "recovery"]
scanner = []
recovery = []
full = ["scanner", "recovery", "api", "database", "cache", "metrics", "security", "config"]
api = []
database = []
cache = []
metrics = []
security = []
config = []

[dependencies]
# Solana
solana-sdk         = "1.18"
solana-client      = "1.18"
solana-account-decoder = "1.18"
solana-transaction-status = "1.18"
solana-program     = "1.18"
spl-token          = { version = "4.0", features = ["no-entrypoint"] }
spl-token-2022     = { version = "0.9", features = ["no-entrypoint"] }

# Async runtime
tokio              = { version = "1.40", features = ["full"] }
tokio-util         = { version = "0.7", features = ["codec"] }
async-trait        = "0.1"
futures            = "0.3"

# Web / API
axum               = "0.7"
tower              = "0.4"
reqwest            = { version = "0.11", features = ["json", "native-tls"] }

# Serialization
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
toml               = "0.8"
prost              = "0.13"
bincode            = "1.3"

# Logging / tracing
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# CLI / Config
clap               = { version = "4.0", features = ["derive"] }
config             = "0.14"

# Error handling
anyhow             = "1.0"
thiserror          = "1.0"

# Database
rusqlite           = { version = "0.31", features = ["bundled", "chrono", "uuid"] }

# Security - zeroize pinned to <1.4 to satisfy curve25519-dalek via solana-program
zeroize            = "1.3"
sha2               = "0.10"
hmac               = "0.12"
rand               = "0.8"
aes-gcm            = "0.10"

# Concurrency / performance
rayon              = "1.8"
dashmap            = "5.5"
parking_lot        = "0.12"
crossbeam          = "0.8"
flume              = "0.11"
moka               = { version = "0.12", features = ["future"] }

# Utilities
uuid               = { version = "1.0", features = ["v4", "serde"] }
chrono             = { version = "0.4", features = ["serde"] }
hex                = "0.4"
bs58               = "0.5"
bytes              = "1.5"
fastrand           = "2.0"
regex              = "1.10"

# Additional dependencies
tower-http        = { version = "0.5", features = ["cors", "compression-gzip", "trace"] }
metrics            = "0.21"
metrics-exporter-prometheus = "0.12"
governor           = "0.6"
jsonwebtoken       = "9.0"
redis              = { version = "0.25", features = ["tokio-comp"] }
base64             = "0.22"
url                = "2.5"
urlencoding        = "2.1"
flate2             = "1.0"
num_cpus           = "1.16"
